--- a/jutils/build.gradle
+++ b/jutils/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.orhanobut:logger:2.2.0'
     api 'com.github.ltym2016:StatusBarUtils:1.0.9'
+    api 'com.github.ltym2016:UIButton:1.0.0'
 }
